# GW2-Builds

./: .gitignore  .pre-commit-config.yaml  LICENSE  Pipfile  README.md  main.py  pyproject.toml  test  test.index
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: main.yml  sonarqube.yml
config/: __init__.py  config.ini  provider.py
core/: __init__.py  api_controller.py  event_observer.py  loader.py
core/errors/: __init__.py
data/: __init__.py  armor_repository.py  back_repository.py  build_repository.py  db.py  foods_repository.py  infusion_repository.py  pets_repository.py  professions_repository.py  runes_repository.py  sigils_repository.py  skills_repository.py  specializations_repository.py  stats_repository.py  trait_repository.py  trinkets_repository.py  utilities_repository.py  weapons_repository.py
gw2-env/: pyproject.toml
gw2-env/gw2_env/envs/: BaseWeaponAndSkillEnv.py  __init__.py
gw2-env/gw2_env/spaces/: __init__.py  boon_space.py  condi_space.py
model/: __init__.py  enums.py
model/api/: __init__.py  api_decorator.py  enums.py  fact.py  item.py  item_stats.py  profession.py  skill.py  specialization.py  trait.py  utils.py  weapon.py
model/characted_build/: __init__.py  armor_setup.py  back_setup.py  character_setup.py  consumables_setup.py  specializations_setup.py  trinket_setup.py  weapons_setup.py
model/converter/: api_to_dao.py
model/dao/: __init__.py  build.py  fact.py  item.py  item_stats.py  profession.py  skill.py  specialization.py  trait.py  weapon.py
old/config/: config.ini
old/core/: __init__.py  api_controller.py
old/data/: armor_repository.py  back_repository.py  foods_repository.py  runes_repository.py
old/utils/: __init__.py  list_utils.py
tests/: __init__.py
tests/core/: __init__.py  test_loader.py
tests/test_utils/: __init__.py  asserts.py  factory.py
tests/tests_config/: test_config.py
tests/tests_core/: __init__.py  test_api_controller.py  test_loader.py
tests/tests_data/: __init__.py  test_amor_repository.py  test_build_repository.py  (+13 more)
ui/: __init__.py
utils/: __init__.py  singleton.py
(+34 files in other folders)
